# reference_project_stmIDE

./: .clang-format  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeListsSYSTEM.txt  ConfigDump  README.md  buildTests.sh  codecov.yml  pytest.ini  reference_project_stmIDE.ioc  workspace.code-workspace
.circleci/: config.yml  paralell-workflow-config.yml.bak
.circleci/images/primary/: Dockerfile
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: development_compile-image.yml  development_run-unit-tests.yml  main.yml  management_PR-created.yml  management_push-to-master.yml
CM4/: .cproject  .project  STM32H755ZITX_FLASH.ld  STM32H755ZITX_RAM.ld  reference_project_stmIDE_CM4.launch
CM4/Core/Inc/: main.h  stm32h7xx_it.h
CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
CM4/Debug/: makefile  objects.list  reference_project_stmIDE_CM4.list
CM4/LWIP/App/: lwip.c
CM7/: .cproject  .project  STM32H755ZITX_FLASH.ld  reference_project_stmIDE_CM7.launch
CM7/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
CM7/Debug/: makefile  objects.list  reference_project_stmIDE_CM7.list
Cosmos/: .clang-format  CMakeLists.txt
Cosmos/application/inc/: blinking_led_CM7.h  default_CM4.h  default_CM7.h
Cosmos/application/src/: blinking_led_CM4.c  blinking_led_CM7.c  default_CM4.c  default_CM7.c
Cosmos/applicationLayer/inc/: blinking_led_CM4.h  blinking_led_CM7.h  default_CM7.h
Cosmos/applicationLayer/src/: blinking_led_CM4.c  blinking_led_CM7.c  default_CM4.c
Cosmos/configuration/: FileGeneration.json  README.md  _requirements.md  environment.json  workspace.json
Cosmos/configuration/systemDefinition/: README.md
Cosmos/configuration/systemDefinition/cores/: cores.json  kernels.json  programs.json  scheduleTableEntries.json  schedulers.json  sysJobs.json  tasks.json  threads.json
Cosmos/configuration/systemDefinition/system/: buffers.json  channels.json  interrupts.json  os.json  osEvents.json  semaphores.json  spinlocks.json  switches.json  sysCallRoutes.json
